--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "daisyui": "^4.12.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
